# hermes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: args.rs  lib.rs  main.rs  subcommands.rs
src/commands/: build.rs  serve.rs
src/pipelines/: html.rs
src/serve/: dev_server.rs  mod.rs
src/templates/: index-template.html  manifest-template.json
www/: index.html
