[package]
name = "hermes"
version = "0.0.1"
edition = "2021"
description = "Package Bevy apps on Web and Native platforms."
authors = [
  "Spencer C. Imbleau <spencer@vgx.dev>",
  "Luke Volkmer <luke@vgx.dev>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vectorgameexperts/hermes"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.33", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ansi_term = "0.12"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
axum = "0.6.20"
notify = "6.1.1"
sha2 = "0.10.8"